<resources>
    <string name="app_name">TwoActivities</string>
    <string name="button_main">Send</string>
    <string name="activity2_name">SecondActivity</string>
    <string name="editText_main">Enter Message Here</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Reply Here</string>
    <string name="text_header">Message Received</string>
    <string name="text_header_reply">Reply Received</string>
</resources>
