<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.valerov.twoactivities.MainActivity">


    <TextView
        android:id="@+id/text_header_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/text_header_reply"
        android:visibility="invisible"
        android:textStyle="bold"
        android:textSize="?android:attr/textAppearanceMedium"
        />

    <TextView
        android:id="@+id/text_message_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text_header_reply"
        android:visibility="invisible"
        android:textSize="?android:attr/textAppearanceMedium"
        />

    <Button
        android:id="@+id/button_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="launchSecondActivity"
        android:text="@string/button_main"
    />

    <EditText
        android:id="@+id/editText_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_main"
        android:layout_alignBottom="@+id/button_main"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/button_main"
        android:ems="10"
        android:hint="@string/editText_main" />
</RelativeLayout>
